Corrección de Imágenes (semilla)

--- a/public/unboxing.html
+++ b/public/unboxing.html
@@ -328,8 +328,8 @@
         id: 'pablo-lozada',
         name: 'Sombra-QA',
         role: 'Especialista en Bugs',
-        packImage: 'https://picsum.photos/seed/pvz-moon/400/400',
-        cardImage: 'https://i.pravatar.cc/400?u=pablo-lozada',
+        packImage: '/members/ImagenPablo1.jpeg',
+        cardImage: '/members/ImagenPablo1.jpeg',
       },
       {
         id: 'juan-arcos',
