agregar imagen pablo-meme

--- a/public/unboxing.html
+++ b/public/unboxing.html
@@ -460,7 +460,7 @@
         const zone = document.getElementById('sticker-zone');
         const hero = document.getElementById('hero-reveal');
 
-        const memes = [, '/members/william-meme.png', '/members/vladimir-meme.png', '/members/erick-meme.png', '/members/juan-meme.png', '/members/sebas-meme.png'];
+        const memes = ['/members/pablo-meme.png', '/members/william-meme.png', '/members/vladimir-meme.png', '/members/erick-meme.png', '/members/juan-meme.png', '/members/sebas-meme.png'];
 
         let idx = 0;
         let isAnimating = false;
