--- a/public/unboxing.html
+++ b/public/unboxing.html
@@ -475,8 +475,43 @@
         const zone = document.getElementById('sticker-zone');
         const hero = document.getElementById('hero-reveal');
 
-        const memes = ['/members/pablo-meme.png', '/members/william-meme.png', '/members/vladimir-meme.png', '/members/erick-meme.png', '/members/juan-meme.png', '/members/sebas-meme.png'];
 
+
+        const allMemes = [
+            { img: '/members/meme1.png', nombre: 'Meme Supremo' },
+            { img: '/members/meme2.png', nombre: 'Bug Detectado' },
+            { img: '/members/meme3.png', nombre: 'Modo QA' },
+            { img: '/members/meme4.png', nombre: 'Deploy Peligroso' },
+            { img: '/members/meme5.png', nombre: 'Funciona en mi PC' },
+            { img: '/members/meme6.png', nombre: 'Stack Overflow' },
+            { img: '/members/meme7.png', nombre: 'Commit Final' },
+            { img: '/members/meme8.png', nombre: 'Refactor God' },
+            { img: '/members/meme9.png', nombre: 'Error 404' },
+            { img: '/members/meme10.png', nombre: 'Modo Productivo' },
+            { img: '/members/meme11.png', nombre: 'Backend Power' },
+            { img: '/members/meme12.png', nombre: 'Frontend Magic' },
+            { img: '/members/meme13.png', nombre: 'Full Stack Mode' }
+        ];
+
+        const MEMES_POR_PACK = 6;
+
+        // 🔀 función para mezclar (Fisher-Yates)
+        function shuffle(array) {
+            const arr = [...array];
+            for (let i = arr.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [arr[i], arr[j]] = [arr[j], arr[i]];
+            }
+            return arr;
+        }
+
+        // memes aleatorios para ESTE pack
+
+
+        function generarMemesDelPack() {
+            memes = shuffle(allMemes).slice(0, MEMES_POR_PACK);
+        }
+        let memes = [];
         let idx = 0;
         let isAnimating = false;
 
@@ -643,6 +678,9 @@
 
         function openPack() {
             if (!member) return;
+            generarMemesDelPack();
+            idx = 0;
+            stickers = [];
             pack.style.transition = '0.6s ease-out';
             pack.style.transform = 'scale(1.6) rotate(15deg)';
             pack.style.opacity = '0';
@@ -679,13 +717,16 @@
             if (idx < memes.length) {
                 const s = document.createElement('div');
                 s.className = 'sticker wobble';
+                const memeActual = memes[idx];
+
                 s.innerHTML = `
-                <div class="rarity-badge">Raro</div>
-                <img src="${memes[idx]}" style="width:100%; height:78%; object-fit:cover; border-radius:6px;">
-                <div style="text-align:center; font-size:0.9rem; color:#555; padding-top:4px; font-weight:bold;">
-                    Pegatina de meme
-                </div>
-            `;
+                    <div class="rarity-badge">Raro</div>
+                    <img src="${memeActual.img}" style="width:100%; height:78%; object-fit:cover; border-radius:6px;">
+                    <div style="text-align:center; font-size:0.9rem; color:#555; padding-top:4px; font-weight:bold;">
+                        ${memeActual.nombre}
+                    </div>
+
+                `;
 
                 const newLeft = baseRight - (stickers.length * spacing);
                 s.style.left = `${newLeft}px`;
