Cambios en stadisticas y de foto de portada para el pack 6

--- a/public/unboxing.html
+++ b/public/unboxing.html
@@ -446,7 +446,7 @@
             },
             {
                 id: 'juan-arcos',
-                name: 'SCRIPT-KID',
+                name: 'ArquiNuez Cloud',
                 role: 'Arquitecto de Nube',
                 packImage: '/members/juan-prime.jpeg',
                 cardImage: '/members/juan.jpeg',
