--- a/public/unboxing.html
+++ b/public/unboxing.html
@@ -478,19 +478,19 @@
 
 
         const allMemes = [
-            { img: '/members/meme1.png', nombre: 'Meme Supremo' },
-            { img: '/members/meme2.png', nombre: 'Bug Detectado' },
-            { img: '/members/meme3.png', nombre: 'Modo QA' },
-            { img: '/members/meme4.png', nombre: 'Deploy Peligroso' },
-            { img: '/members/meme5.png', nombre: 'Funciona en mi PC' },
-            { img: '/members/meme6.png', nombre: 'Stack Overflow' },
-            { img: '/members/meme7.png', nombre: 'Commit Final' },
-            { img: '/members/meme8.png', nombre: 'Refactor God' },
-            { img: '/members/meme9.png', nombre: 'Error 404' },
-            { img: '/members/meme10.png', nombre: 'Modo Productivo' },
-            { img: '/members/meme11.png', nombre: 'Backend Power' },
-            { img: '/members/meme12.png', nombre: 'Frontend Magic' },
-            { img: '/members/meme13.png', nombre: 'Full Stack Mode' }
+            { img: '/members/meme1.jpeg', nombre: 'Error de capa 8' },
+            { img: '/members/meme2.jpeg', nombre: 'Bug Detectado' },
+            { img: '/members/meme3.jpeg', nombre: 'control c , control v' },
+            { img: '/members/meme4.jpeg', nombre: 'Deploy Peligroso' },
+            { img: '/members/meme5.jpeg', nombre: 'Funciona en mi PC' },
+            { img: '/members/meme6.jpeg', nombre: 'SQL' },
+            { img: '/members/meme7.jpeg', nombre: 'Commit Final' },
+            { img: '/members/meme8.jpeg', nombre: 'Cambios en produccion' },
+            { img: '/members/meme9.jpeg', nombre: 'Error 404' },
+            { img: '/members/meme10.jpeg', nombre: 'Modo Productivo' },
+            { img: '/members/meme11.jpeg', nombre: 'Backend Power' },
+            { img: '/members/meme12.jpeg', nombre: 'VibeCode Mode' },
+            { img: '/members/meme13.jpeg', nombre: 'Delete sin where' }
         ];
 
         const MEMES_POR_PACK = 6;
