Actualizacion de Foto mas decente :)

--- a/public/unboxing.html
+++ b/public/unboxing.html
@@ -421,7 +421,7 @@
                 name: 'Gira-Soles',
                 role: 'Productor de UX',
                 packImage: '/members/william-prime.png',
-                cardImage: '/members/william.png',
+                cardImage: '/members/william-nue.jpeg',
             },
             {
                 id: 'sebastian-acaro',
